--- a/src/app/components/volunteer/volunteer.component.html
+++ b/src/app/components/volunteer/volunteer.component.html
@@ -9,7 +9,7 @@
             <!-- <select class="form-select form-control" aria-label="Default select example"></select> -->
             <input class="form-control" placeholder="מספר זהות" type="text" #ngId="ngModel" [(ngModel)]="Volunteer.Volunteer.id_volunteer" name="id_volunteer"/>
             <input class="form-control" placeholder="כתובת אימייל" type="email" #ngEmail="ngModel" [(ngModel)]="Volunteer.Volunteer.e_mail" name="e_mail"/>
-            <input class="form-control" placeholder="מספר טלפון" type="number" #ngPhone="ngModel" [(ngModel)]="Volunteer.Volunteer.phone" name="phone"/>
+            <input class="form-control" placeholder="מספר טלפון" type="text" #ngPhone="ngModel" [(ngModel)]="Volunteer.Volunteer.phone" name="phone"/>
         </div>
         <div class="col-6 second-col">
             <input class="form-control" placeholder="שם משפחה" type="text" #ngLastName="ngModel" [(ngModel)]="Volunteer.Volunteer.lastName_volunteer" name="lastName_volunteer"/>
@@ -23,10 +23,9 @@
                 <!-- <! <select [(ngModel)]="takingDeliveryService.newTakingDelivery.TDCityID" [ngModelOptions]="{standalone: true}" nam="city"> --> 
             </select> 
         </div>
-
             <div class="col">
               <h6>תחומים וסיסמא</h6>
-              <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button>
+              <button type="button" class="form-control" routerLink="/volunteering-domain/false" >תחומי התנדבות</button>
             </div>
             <div class="col-6 second-col">
               <input class="form-control" placeholder="סיסמא">
@@ -35,7 +34,10 @@
     <div class="row prograph">
         <div class="col-6">
             <h6>כתובת</h6>
-            <input class="form-control" placeholder="עיר" type="text" #ngCity="ngModel" [(ngModel)]="Volunteer.Volunteer.code_city" name="code_city"/>
+            <select class="form-select form-control" aria-label="Default select example">
+                <option *ngFor="let item of list6">{{item.name_city}}</option>
+            </select>
+            <!-- <input class="form-control" placeholder="עיר" type="text" #ngCity="ngModel" [(ngModel)]="Volunteer.Volunteer.code_city" name="code_city"/> -->
             <input class="form-control" placeholder="מספר בנין" type="number" #ngBuildNumber="ngModel" [(ngModel)]="Volunteer.Volunteer.bulding_number" name="bulding_number"/>
             <input class="form-control" placeholder="מספר בית" type="number" #ngHouseNumber="ngModel" [(ngModel)]="Volunteer.Volunteer.house_number" name="house_number"/>
         </div>
@@ -81,11 +83,14 @@
     <div class="row prograph">
         <div class="col">
             <h6 class="inline-title"> שפות:</h6>        
-            <!-- <div class="custom-control custom-checkbox" *ngFor="let item of list5">
-                <input type="checkbox" id="lang1" name="lang" class="custom-control-input">
-                <label class="custom-control-label purple" for="lang1">{{item.name_language}}</label>
-            </div> -->
-            <div class="custom-control custom-checkbox">
+
+            <div  class="custom-control custom-checkbox" *ngFor="let item of list5">
+                <input type="checkbox" value={{item.code_language}} id={{item.code_language}} name="languages" class="custom-control-input"/>
+                <label class="custom-control-label purple" for={{item.code_language}}>{{item.name_language}}</label>
+            </div>
+            
+            
+            <!-- <div class="custom-control custom-checkbox">
                 <input type="checkbox" id="lang1" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang1">עברית</label>
             </div>
@@ -104,32 +109,36 @@
             <div class="custom-control custom-checkbox">
                 <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
-            </div> 
+            </div>  -->
         </div>
     </div>  
 </div> 
 <div class="section">
-    <h2 class="title"> מידע נוסף למתנדב </h2>
+    <h2 class="title">מידע נוסף למתנדב</h2>
         <div>
         <!-- <h5>שירות</h5> -->
         <div>
             <div class="row prograph">
                 <!-- <h5> רכב/רישיון נהיגה</h5> -->   
                 <div class="col">  
-                    <h6 class="inline-title"> רשיון נהיגה :</h6>      
+                    <h6 class="inline-title">רישיון נהיגה:</h6>      
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="license1" name="license" class="custom-control-input" value="yes">
+                        <input type="radio" id="license1" name="license" class="custom-control-input" value="1"
+                        #ngCodeLicenseCarYes="ngModel" [(ngModel)]="Volunteer.Volunteer.code_license_car" name="CodeLicenseCarYes">
                         <label class="custom-control-label purple" for="license1">כן</label>
                     </div>
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="license2" name="license" class="custom-control-input" value="no">
+                        <input type="radio" id="license2" name="license" class="custom-control-input" value="0"
+                        #ngCodeLicenseCarNo="ngModel" [(ngModel)]="Volunteer.Volunteer.code_license_car" name="#ngCodeLicenseCarNo">
                         <label class="custom-control-label purple" for="license2">לא</label>
                     </div>
-                    <div class="col-6">
-                    <select class="form-select form-control" aria-label="Default select example">
-                        <option *ngFor="let item of list2">{{item.description}}</option>
-                    </select>
-                    <input type="date" class="form-control" placeholder="תאריך תוקף"/>
+                    <div class="col" *ngIf="Volunteer.Volunteer.code_license_car == 1">
+                        <h6 class="inline-title">סוג רשיון נהיגה:</h6>
+                        <select class="form-select form-control col-6" aria-label="Default select example">
+                           <option *ngFor="let item of list2">{{item.description}}</option>
+                        </select>
+                       <h6 class="inline-title">תוקף רשיון נהיגה :</h6>
+                      <input type="date" class="form-control col-6" placeholder="תאריך תוקף"/>
                    </div>
                 <!-- <div class="col">
                     <h6 class="inline-title"> וו גרירה  :</h6>
@@ -187,37 +196,29 @@
                         <label class="custom-control-label purple" for="sheet2">לא</label>
                     </div>
                 </div> -->
-              <div class="col-6">
+              <div class="col">
                 <!-- <input class="form-control" placeholder="מהות העבירה "/> -->
                 <!-- <input type="date" class="form-control" placeholder="תאריך קבלת דוח אחרון"/> -->
                 <div>
                     <h6 class="inline-title">נשק אישי:</h6>
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="Weapon1" name="Weapon" class="custom-control-input" value="yes">
+                        <input type="radio" id="Weapon1" name="Weapon" class="custom-control-input" value="1"
+                        #ngCodeWeaponsLicenseYes="ngModel" [(ngModel)]="Volunteer.Volunteer.code_license_weapon" name="CodeWeaponsLicenseYes">
                         <label class="custom-control-label purple" for="Weapon1">כן</label>
                     </div>
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="Weapon2" name="Weapon" class="custom-control-input" value="no">
+                        <input type="radio" id="Weapon2" name="Weapon" class="custom-control-input" value="0"
+                        #ngCodeWeaponsLicenseNo="ngModel" [(ngModel)]="Volunteer.Volunteer.code_license_weapon" name="#ngCodeWeaponsLicenseNo">
                         <label class="custom-control-label purple" for="Weapon2">לא</label>
                     </div>
                 </div>
                 <div>
-                    <h6 class="inline-title">  תוקף רשיון נשק :</h6>
-                    <input type="date" class="form-control" placeholder="תאריך תוקף"/>
-                    <!-- <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="validity1" name="validity" class="custom-control-input" value="yes">
-                        <label class="custom-control-label purple" for="validity1">כן</label>
-                    </div>
-                    <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="validity2" name="validity" class="custom-control-input" value="no">
-                        <label class="custom-control-label purple" for="validity2">לא</label> -->                        
-                 <!-- </div> --> 
-                </div>
-                <div>
-                    <h6 class="inline-title"> סוג רשיון:</h6>
-                    <select class="form-select form-control" aria-label="Default select example">
+                <div class="col" *ngIf="Volunteer.Volunteer.code_license_weapon == 1">
+                    <h6 class="inline-title">סוג רשיון נשק:</h6>
+                    <select class="form-select form-control col-6" aria-label="Default select example">
                         <option *ngFor="let item of list3">{{item.description}}</option>
                     </select>
+              
                     <!-- <div class="custom-control custom-radio custom-control-inline">
                         <input type="radio" id="gun1" name="gun" class="custom-control-input" value="yes">
                         <label class="custom-control-label purple" for="gun1">אקדח</label>
@@ -226,41 +227,70 @@
                         <input type="radio" id="gun2" name="gun" class="custom-control-input" value="no">
                         <label class="custom-control-label purple" for="gun2">רובה</label>
                     </div> -->
-                </div>
+             
+                <div>
+                    <h6 class="inline-title">תוקף רשיון נשק :</h6>
+                    <input type="date" class="form-control col-6" placeholder="תאריך תוקף"/>
+                    <!-- <div class="custom-control custom-radio custom-control-inline">
+                        <input type="radio" id="validity1" name="validity" class="custom-control-input" value="yes">
+                        <label class="custom-control-label purple" for="validity1">כן</label>
+                    </div>
+                    <div class="custom-control custom-radio custom-control-inline">
+                        <input type="radio" id="validity2" name="validity" class="custom-control-input" value="no">
+                        <label class="custom-control-label purple" for="validity2">לא</label> -->                        
+                 <!-- </div> --> 
+                </div>  
+              </div> 
+              </div>
               </div>
             </div>
          <!-- <div class="row prograph"> -->
-            <div class="col-6 ">
-                <h6 class="inline-title">שירות צבאי:</h6>
-                <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" id="servic1" name="servic" class="custom-control-input" value="yes">
-                    <label class="custom-control-label purple" for="servic1">כן</label>
+            <div class="col">
+                <h6 class="">סוג שרות:</h6>
+                <div class="custom-control custom-radio custom-control">
+                    <input type="radio" id="servic1" name="CodeService" class="custom-control-input" value="1"
+                     [(ngModel)]="Volunteer.Volunteer.code_service" >
+                    <label class="custom-control-label purple" for="servic1">צבאי</label>
                 </div>
-                <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" id="servic2" name="servic" class="custom-control-input" value="no">
-                    <label class="custom-control-label purple" for="servic2">לא</label>
+                <div class="custom-control custom-radio custom-control">
+                    <input type="radio" id="servic2" name="CodeService" class="custom-control-input" value="2"
+                    [(ngModel)]="Volunteer.Volunteer.code_service" >
+                    <label class="custom-control-label purple" for="servic2">לאומי/אזרחי</label>
                 </div>
-                <div class="col-6">
-                    <input class="form-control" placeholder="דרגת שירות  "/>
-                    <input type="date" class="form-control" placeholder="תאריך שחרור"/>
+                <div class="custom-control custom-radio custom-contro">
+                    <input type="radio" id="servic3" name="CodeService" class="custom-control-input" value="3"
+                    [(ngModel)]="Volunteer.Volunteer.code_service" >
+                    <label class="custom-control-label purple" for="servic3">ללא שרות</label>
                 </div>
-                <div >
+                <div>
+                    <div class="col" *ngIf="Volunteer.Volunteer.code_service == 1"> 
+                    <input class="form-control col-6" placeholder="דרגת שירות  "/>
+                    <input type="date" class="form-control col-6" placeholder="תאריך שחרור"/>
+                   </div>
+                </div>
+
+                <div>
+                    <div class="col" *ngIf="Volunteer.Volunteer.code_service == 2"> 
+                    <input class="form-control col-6" placeholder="תפקיד שירות  "/>
+                    <!-- <input class="form-control" placeholder="מקום שירות  "/> -->
+                    <input type="date" class="form-control col-6" placeholder="תאריך שחרור"/>
+                    <!-- <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button> -->
+                   </div>
+               </div>
+
+                <!-- <div >
                     <h6 class="inline-title">שירות לאומי/אזרחי:</h6>
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="servic3" name="servic1" class="custom-control-input" value="yes">
+                        <input type="radio" id="servic3" name="CodeService1" class="custom-control-input" value="2"
+                         >
                         <label class="custom-control-label purple" for="servic3">כן</label>
                     </div>
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" id="servic4" name="servic1" class="custom-control-input" value="no">
+                        <input type="radio" id="servic4" name="CodeService1" class="custom-control-input" value="3"
+                         [(ngModel)]="Volunteer.Volunteer.code_service" >
                         <label class="custom-control-label purple" for="servic4">לא</label>
                     </div>
-                    <div class="col-6">
-                        <input class="form-control" placeholder="תפקיד שירות  "/>
-                        <!-- <input class="form-control" placeholder="מקום שירות  "/> -->
-                        <input type="date" class="form-control" placeholder="תאריך שחרור"/>
-                        <!-- <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button> -->
-
-                    </div>
+                     -->
                     <!-- <div>
                         <h6 class="inline-title"> ידע קודם בהפעלת נשק :</h6>
                         <div class="custom-control custom-radio custom-control-inline">
@@ -272,7 +302,7 @@
                             <label class="custom-control-label purple" for="knowledge2">לא</label>
                         </div>
                     </div> -->
-                </div>
+                <!-- </div> -->
             </div>
         </div>
         <div  class="col-6 second-col">
