--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -19,13 +19,16 @@
             <input class="form-control" placeholder="מספר טלפון" type="number" #ngPhone="ngModel" [(ngModel)]="Assisted.Assisted.phone" name="phone"/>
             <select class="form-select form-control" aria-label="Default select example">
                 <option *ngFor="let item of list1">{{item.description}}</option>
-              </select>
+            </select>
         </div>
     </div>
     <div class="row prograph">
         <div class="col-6">
             <h6>כתובת</h6>
-            <input class="form-control" placeholder="עיר" type="text" #ngCity="ngModel" [(ngModel)]="Assisted.Assisted.code_city" name="code_city"/>
+            <select class="form-select form-control" aria-label="Default select example">
+                <option *ngFor="let item of list3">{{item.name_city}}</option>
+            </select>
+            <!-- <input class="form-control" placeholder="עיר" type="text" #ngCity="ngModel" [(ngModel)]="Assisted.Assisted.code_city" name="code_city"/> -->
             <input class="form-control" placeholder="מספר בנין" type="number" #ngNumberBuild="ngModel" [(ngModel)]="Assisted.Assisted.number_building" name="number_building"/>
             <input class="form-control" placeholder="מספר בית" type="number" #ngNumberHouse="ngModel" [(ngModel)]="Assisted.Assisted.number_house" name="number_house"/>
         </div>
@@ -38,7 +41,7 @@
         <div class="row prograph">
           <div class="col-6">
             <h6>תחומים וסיסמא</h6>
-            <button type="button" class="form-control" routerLink="/volunteering-domain" >תחומי התנדבות</button>
+            <button type="button" class="form-control" routerLink="/volunteering-domain/true" >תחומי התנדבות</button>
           </div>
           <div class="col-6 second-col">
             <input class="form-control" placeholder="סיסמא">
@@ -63,7 +66,12 @@
     <!-- </div>  -->
     <div class="row prograph">
         <div class="col">
-            <h6 class="inline-title"> שפות:</h6>
+            <h6 class="inline-title"> שפות:</h6>        
+            <div class="custom-control custom-checkbox" *ngFor="let item of list2">
+                <input type="checkbox" value={{item.code_language}} id={{item.code_language}} name={{item.code_language}} class="custom-control-input" >
+                <label class="custom-control-label purple" for={{item.code_language}}>{{item.name_language}}</label>
+            </div>
+            <!-- <h6 class="inline-title"> שפות:</h6>
             <div class="custom-control custom-checkbox">
                 <input type="checkbox" id="lang1" name="lang" class="custom-control-input"  value="no">
                 <label class="custom-control-label purple" for="lang1">עברית</label>
@@ -83,7 +91,8 @@
             <div class="custom-control custom-checkbox">
                 <input #lang4 type="checkbox" id="lang5" name="lang" class="custom-control-input" >
                 <label class="custom-control-label purple" for="lang5">ערבית</label>
-            </div>
+            </div> -->
+            <!-- <div *ngif="!form.value">לפחות אחד צריך להיות מסומן</div> -->
         </div>
     </div>
     <div class="button-wapper">
@@ -91,5 +100,3 @@
     </div> 
   </div>
 </form>
-
-
