--- a/src/app/components/assisted/assisted.component.html
+++ b/src/app/components/assisted/assisted.component.html
@@ -115,5 +115,5 @@
     <div class="button-wapper">
         <button type="submit" class="btn btn-dark btn-perple btn-lg"> רישום</button>
     </div> 
-  </div>
+  <!-- </div> -->
 </form>
