--- a/src/app/components/volunteer/volunteer.component.css
+++ b/src/app/components/volunteer/volunteer.component.css
@@ -14,6 +14,12 @@
     background-color: white;
     border-top: 5px solid #e65d13;
 }
+@media ( max-width:1052px){
+    .section{
+        padding: 20px!important;
+        margin:30px!important;
+    }
+}
 .first-section{
     border-top: 5px solid white!important;
     /* position:absolute; */
